--- a/arch/arm64/configs/usu_h818_defconfig
+++ b/arch/arm64/configs/usu_h818_defconfig
@@ -477,6 +477,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_TRIPNDROID is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -487,6 +488,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_TRIPNDROID=y
 CONFIG_CPU_BOOST=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
