--- a/arch/arm64/configs/usu_h819_defconfig
+++ b/arch/arm64/configs/usu_h819_defconfig
@@ -476,6 +476,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_TRIPNDROID is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -486,6 +487,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_TRIPNDROID=y
 CONFIG_CPU_BOOST=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
