--- a/arch/arm64/configs/aoscp_h811_defconfig
+++ b/arch/arm64/configs/aoscp_h811_defconfig
@@ -271,7 +271,7 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ZEN=y
-# CONFIG_DEFAULT_ANXIETY is not set
+CONFIG_DEFAULT_ANXIETY=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_DEADLINE is not set
@@ -279,8 +279,8 @@ CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_ZEN is not set
-CONFIG_DEFAULT_FIOPS=y
-CONFIG_DEFAULT_IOSCHED="fiops"
+# CONFIG_DEFAULT_FIOPS is not set
+CONFIG_DEFAULT_IOSCHED="anxiety"
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
