g4: dtsi: do not burn the g4
the most effective way to cooling down is to use hot-plugging.
this commit adjusts the threshold of 105 bc that is like burning in hell
and when it comes to throttling it will be less agressive as well (huh .. it rhymes..).

Signed-off-by: steadfasterX <steadfasterX@gmail.com>

--- a/arch/arm64/boot/dts/lge/msm8992-lge.dtsi
+++ b/arch/arm64/boot/dts/lge/msm8992-lge.dtsi
@@ -123,11 +123,11 @@
 	qcom,msm-thermal {
 		compatible = "qcom,msm-thermal";
 		qcom,core-control-mask = <0x36>;
-		qcom,hotplug-temp = <105>;
+		qcom,hotplug-temp = <90>;
 		qcom,hotplug-temp-hysteresis = <40>;
-		qcom,big-hotplug-temp = <105>;
+		qcom,big-hotplug-temp = <90>;
 		qcom,big-hotplug-temp-hysteresis = <40>;
-		qcom,freq-mitigation-value = <960000>;
+		qcom,freq-mitigation-value = <1248000>;
 	};
 
 	qcom,bcl {
