g4: dtsi: massive thermal handling changes (1/2)
... part 2/2 happens in the device tree (g4-common, thermal-engine).

TL;DR:

The kernel handles hotplug of all cores if needed (just HIGHLY optimized now),
while frequencies will be handled by the resurrected thermal-engine service.

Details:

 - generally re-plug an unplugged core MUCH earlier
 - reducing the "early-boot" hotplug from 105 C to 90 C with clearance at 85 C
 - increasing hotplug of the little cluster from 90 C to 100 C with clearance at 90 C
 - increasing hotplug of the big cluster from 90 C to 98 C with clearance at 70 C
 - stop using frequency handling by the kernel
 - increasing polling interval from 25 ms to 50 ms

The new hotplug handling approach:

Before we had situations where unplug/plug happens too early/late which causes
performance slow-downs and other issues. This is fixed now by unplugging later with a
much sooner clearance (i.e. re-plug a core).
Unplugging a core is the most effective way to reduce heat obviously but ofc this
comes with dramatic performance losses.
The way it is integrated now ensures the device does not get to hot (105 actually IS
too hot, which was the default by LG) while bringing a core back much earlier into
the game.

The new frequency handling approach:

Frequencies on kernel level are not very flexible and so you need the thermal-engine
service for monitoring and handling that correctly. Actually the frequency handling here
has been "disabled" (i.e. using an impossible high value) to avoid funny ping-pong
games with the user-space service.
Other then that without a thermal service running (which was the case until now!!!)
the GPU and battery are not monitored and so can cause damages to the device. So
resurrecting that service is needed in any case, IMHO.

Signed-off-by: steadfasterX <steadfasterX@gmail.com>

--- a/arch/arm64/boot/dts/lge/msm8992-lge.dtsi
+++ b/arch/arm64/boot/dts/lge/msm8992-lge.dtsi
@@ -120,14 +120,40 @@
 		status = "disabled";
 	};
 
+	// see Documentation/devicetree/bindings/arm/msm/msm_thermal.txt
 	qcom,msm-thermal {
 		compatible = "qcom,msm-thermal";
-		qcom,core-control-mask = <0x36>;
-		qcom,hotplug-temp = <90>;
-		qcom,hotplug-temp-hysteresis = <40>;
-		qcom,big-hotplug-temp = <90>;
-		qcom,big-hotplug-temp-hysteresis = <40>;
-		qcom,freq-mitigation-value = <1248000>;
+		qcom,poll-ms = <500>;
+		/*
+		 If the temperature exceeds the specified level in limit-temp,
+		 the maximum allowed CPU frequency will be REDUCED.
+		 If the temperature drops below the sum of the limit-temp plus the
+		 temp-hysteresis, then the maximum allowed CPU frequency will be INCREASED.
+		 stage: during early boot (no thermal_sys avail)
+		*/
+		qcom,limit-temp = <90>;
+		qcom,temp-hysteresis = <5>; // 85 C
+
+		/*
+		 disable frequency handling by the kernel by using an impossible value!
+		 this can cause a lot of "funny" ping-pong games with thermal-engine!
+		 check thermal-engine.conf for frequency handling
+		*/
+		qcom,freq-mitigation-temp = <200>;
+		//qcom,freq-mitigation-temp-hysteresis = <5>;
+		//qcom,freq-mitigation-value = <864000>;
+
+		/* defines the limit at which the CPU hotplug is invoked to take CPUs offline */
+		qcom,core-limit-temp = <100>; // little cluster, by thermal_sys
+		qcom,core-temp-hysteresis = <10>; // 90 C
+
+		qcom,hotplug-temp = <98>; // by thermal_sys
+		qcom,hotplug-temp-hysteresis = <28>; // 70 C
+
+		qcom,freq-mitigation-control-mask = <0x3e>; // 111110 (binary, right2left, cpu0-5)
+
+		qcom,big-hotplug-temp = <98>;
+		qcom,big-hotplug-temp-hysteresis = <28>; // 70 C
 	};
 
 	qcom,bcl {
